# simple-3d-raycaster-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  REFACTORING_PLAN.md  fake_map.c  fake_map_manager.c  frontend.h  frontend_sdl.c  game_globals.h  main.c  map.c  map.h  map.txt  map_info.txt  map_manager.c  map_manager.h  map_manager_ascii.c  map_manager_fake.c  map_sprites.txt  plan.md  platform_sdl.c  platform_sdl.h  raycaster.c  raycaster.h  sprites.c  sprites.h  test_map_loader.c  test_map_manager_ascii.c  test_raycaster.c  texture.c  texture.h  textures_sdl.c  textures_sdl.h
assets/: map_sprites.txt  map_tiles.txt
docs/: ARCHITECTURE.md  CONVENTIONS.md
tools/: gen_sprites.c
